# SunsetCraft

./: CMakeLists.txt  README.mb  README.md  vcpkg.json
Engine/: CMakeLists.txt  SunsetPCH.h
Engine/Core/: Application.cpp  Application.h  ApplicationSetting.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Scene.h
Engine/Log/: Logger.cpp  Logger.h
Engine/Math/: AABB.cpp  AABB.h
Engine/Network/: INetworkTransport.h  NetworkSystem.cpp  NetworkSystem.h  TcpTransport.cpp  TcpTransport.h
Engine/Render/: Buffer.cpp  Buffer.h  Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Render.cpp  Render.h  RenderCommande.cpp  RenderCommande.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/Shaders/: SlateImage.frag  SlateImage.vert  Square.vert
Engine/Slate/: HorizontalBox.cpp  HorizontalBox.h  Slate.cpp  Slate.h  SlateImage.cpp  SlateImage.h  Square.cpp  Square.h
Engine/Utility/: DebugGLM.h  Random.cpp  Random.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  UtilityFunction.cpp  UtilityFunction.h
SunsetCraft/: BlockReg.json  CMakeLists.txt  main.cpp
SunsetCraft/Shaders/: ChunkFragShader.frag  ChunkVertShader.vert  Cloud.frag  Cloud.vert  CubeOutline.frag  CubeOutline.vert  SkyCube.frag
SunsetCraft/Sources/: BlockReg.json  CameraLayer.cpp  CameraLayer.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  CraftLayer.cpp  CraftLayer.h  CraftScene.h  DebugLayer.cpp  DebugLayer.h  Input.json  TexturesManager.cpp  TexturesManager.h
SunsetCraft/Sources/Chunk/: BiomeGenerator.cpp  BiomeGenerator.h  BiomeType.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  ChunkUtility.h  HeightGenerator.cpp  HeightGenerator.h  WorldGenerator.cpp  WorldGenerator.h
SunsetCraft/Sources/Layers/: BlockRegistryLayer.cpp  BlockRegistryLayer.h  DebugLayer.cpp  DebugLayer.h  GameLayer.cpp  GameLayer.h  InventoryLayer.cpp  InventoryLayer.h  ToolbarLayer.cpp  ToolbarLayer.h
SunsetCraft/Sources/Utility/: BlockRegistry.cpp  BlockRegistry.h  (+2 more)
(+8 files in other folders)
